--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       </li>
     </ul>
     <div class="ms-auto">
-      <input type="checkbox" class="btn-check" id="darkSwitch" checked autocomplete="on">
+      <input type="checkbox" class="btn-check" id="darkSwitch" checked autocomplete="off">
       <label class="btn btn-dark btn-sm rounded-5" for="darkSwitch" data-aos-duration="2000"
           data-aos="fade-in"><iconify-icon id="darkmode"></iconify-icon></label>
   </div>
@@ -519,7 +519,6 @@ fetch(apiUrl)
   "@muhfhri._",
   "Front End Developer",
   "UI Design",
-  "♡ @nnayas_06 ^•^",
   "To The Top!",
   "Junior Web Developer",
 ];
@@ -581,7 +580,7 @@ clickableElements.forEach(element => {
 </script>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="js/button_top.js"></script>
-<script src="js/dark-mode-switch.min.js"></script>
+<script src="js/dark-mode-switch.js"></script>
 <script src="js/multilevel.js"></script>
 <!-- End Script -->
 
