--- a/basic.html
+++ b/basic.html
@@ -25,6 +25,7 @@
   <!-- CUSTOM CSS -->
   <link href="css/style.css" rel="stylesheet">
   <link href="css/nav.css" rel="stylesheet">
+  <script src="js/webver.js"></script>
   <link rel="stylesheet" href="css/multilevel.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
   <script src="https://code.iconify.design/iconify-icon/1.0.2/iconify-icon.min.js"></script>
@@ -295,14 +296,14 @@ body {
   </div>
 
   <!-- Footer Start -->
-  <footer class="p-2 mt-2" id="footer">
+  <footer class="p-2" id="footer">
     <div class="container mb-2 text-center">
       <a href="https://instagram.com/flixpseal" id="footer-icon" class="btn btn-outline-dark rounded-5 btn-floating m-1"
         role="button"><i class="fa-brands fa-instagram"></i></a>
       <a href="https://github.com/Flixdz" id="footer-icon" class="btn btn-outline-dark rounded-5 btn-floating m-1"
         role="button"><i class="fa-brands fa-github"></i></a>
-      <a href="https://twitter.com/flixpseal" id="footer-icon" class="btn btn-outline-dark rounded-5 btn-floating m-1"
-        role="button"><i class="fa-brands fa-twitter"></i></a>
+      <a href="https://www.tiktok.com/@flixpseal" id="footer-icon"
+        class="btn btn-outline-dark rounded-5 btn-floating m-1" role="button"><i class="fa-brands fa-tiktok"></i></a>
       <a href="https://discordapp.com/users/899644068697620491" id="footer-icon"
         class="btn btn-outline-dark rounded-5 btn-floating m-1" role="button"><iconify-icon inline
           icon="ic:baseline-discord"></iconify-icon></a>
@@ -311,14 +312,31 @@ body {
       <div class="row">
         <div class="col-md-4">
           <font class="h5 fw-bold">Projects</font>
-          <br><a href="https://nurispedia.relaxstand.repl.co" class="link-none">Nurispedia</a>
-          <br><a href="project/index.html" class="link-none">Project Review</a>
-          <br><a href="https://github.com/flixdz/flixpseal" class="link-none">Portofolio Website</a>
-        </div>
+          <br>No More Projects, just visit my github...
+          <br><a href="https://github.com/muhfhri" class="link-none">Muhfhri GitHub</a>
+      </div>
         <div class="col-md-4">
-          <blockquote class="text-muted mt-3" style="font-family: poppins"><iconify-icon
-              icon="mingcute:quote-left-fill"></iconify-icon>If you believe in yourself, with a tiny pinch of magic all
-            your dreams can come true<iconify-icon icon="mingcute:quote-right-fill"></iconify-icon></blockquote>
+          <br><br>
+          <blockquote class="h5 text-muted" style="font-family: poppins"><iconify-icon
+              icon="mingcute:quote-left-fill"></iconify-icon>
+            <script language="JavaScript">
+
+              var r_text = new Array();
+              r_text[0] = "who is the first? yess its youu >.<";
+              r_text[1] = "Flixdz To The Top!";
+              r_text[2] = "I'll depend on you...";
+              r_text[3] = "Using Material 3 You design";
+              r_text[4] = "Google Sans";
+              r_text[5] = "It's not living (If it's not with you)";
+              r_text[6] = "Planet Bekasi";;
+              var i = Math.floor(7 * Math.random())
+
+              document.write(r_text[i]);
+
+              //-->
+            </script><iconify-icon icon="mingcute:quote-right-fill"></iconify-icon>
+          </blockquote>
+          <br><br>
         </div>
         <div class="col-md-4">
           <font class="h5 fw-bold">Framework</font>
@@ -330,7 +348,8 @@ body {
       </div>
     </div>
   </footer>
-  <div class="text-center small p-3" id="copy">Flixdz @flixpseal, Copyright <i class="fa-regular fa-copyright"></i> 2023
+  <div class="text-center small p-3" id="copy"><span id="version"></span>
+    <br><span id="lastupdate"></span>
     <br>Theme by <img src="image/animation.gif" width="30">, Made with <i class="fa fa-heart" style="color: red"></i>
     for you
   </div>
@@ -344,12 +363,17 @@ body {
   <script>
     AOS.init();
   </script>
+  <script>
+    document.getElementById("version").textContent = websiteVersion;
+    document.getElementById("lastupdate").textContent = websiteDate;
+</script>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
     crossorigin="anonymous"></script>
   <script src="js/multilevel.js"></script>
   <script src="js/button_top.js"></script>
   <script src="js/dark-mode-switch.js"></script>
+
 </body>
 
 </html>
