--- a/varphp.html
+++ b/varphp.html
@@ -355,10 +355,9 @@ echo "Kimo membeli kue nastar dan tempatnya seharga $hasil"
       <div class="row">
         <div class="col-md-4">
           <font class="h5 fw-bold">Projects</font>
-          <br><a href="https://nurispedia.relaxstand.repl.co" class="link-none">Nurispedia</a>
-          <br><a href="project/index.html" class="link-none">Project Review</a>
-          <br><a href="https://github.com/flixdz/flixpseal" class="link-none">Portofolio Website</a>
-        </div>
+          <br>No More Projects, just visit my github...
+          <br><a href="https://github.com/muhfhri" class="link-none">Muhfhri GitHub</a>
+      </div>
         <div class="col-md-4">
           <blockquote class="text-muted mt-3" style="font-family: poppins"><iconify-icon
               icon="mingcute:quote-left-fill"></iconify-icon>If you believe in yourself, with a tiny pinch of magic all
