--- a/windows.html
+++ b/windows.html
@@ -213,10 +213,9 @@
       <div class="row">
         <div class="col-md-4">
           <font class="h5 fw-bold">Projects</font>
-          <br><a href="https://nurispedia.relaxstand.repl.co" class="link-none">Nurispedia</a>
-          <br><a href="project/index.html" class="link-none">Project Review</a>
-          <br><a href="https://github.com/flixdz/flixpseal" class="link-none">Portofolio Website</a>
-        </div>
+          <br>No More Projects, just visit my github...
+          <br><a href="https://github.com/muhfhri" class="link-none">Muhfhri GitHub</a>
+      </div>
         <div class="col-md-4">
           <br><br>
           <blockquote class="h5 text-muted" style="font-family: poppins"><iconify-icon
