--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         <img src="image/flixdz1.png">
                     </div>
                 </div>
-                <small class="user-select-none"><a href="https://www.github.com/flixdz" class="link-none"
+                <small class="user-select-none"><a href="https://www.github.com/muhfhri" class="link-none"
                         onclick="return confirm('Website ini dibuat dengan GitHub Repositories, ingin mengunjungi Halaman web GitHub saya?')">GitHub
                         Page <iconify-icon inline icon="line-md:github-loop"></iconify-icon></a></small>
             </div>
