--- a/ramadhan.html
+++ b/ramadhan.html
@@ -17,6 +17,8 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Amiri+Quran&display=swap');
+
         body {
             font-family: 'Amiri Quran', serif;
         }
