--- a/index.html
+++ b/index.html
@@ -238,7 +238,8 @@
             </p>
             <h4 class="fw-bold">Projek <iconify-icon inline icon="simple-icons:polymerproject"></iconify-icon></h4>
             <p>
-                <a href="https://flixdz.github.io/flixpseal/project/" class="rounded-5 link-none animasi">Project Review</a></h5>
+                <a href="ramadhan" class="rounded-5 link-none animasi">Ramadhan 1446 H</a> |
+				<a href="https://flixdz.github.io/flixpseal/project/" class="rounded-5 link-none animasi">Project Review</a></h5>
             </p>
         </div>
     </div>
