--- a/index.html
+++ b/index.html
@@ -219,22 +219,22 @@
     <div id="others" class="page container">
         <div class="container mt-3 text-center">
             <p>
-                <a href="android.html" class="rounded-5 link-none animasi"><iconify-icon inline
+                <a href="android" class="rounded-5 link-none animasi"><iconify-icon inline
                         icon="material-symbols:android"></iconify-icon> Android</a> |
-                <a href="windows.html" class="rounded-5 link-none animasi"><iconify-icon inline
+                <a href="windows" class="rounded-5 link-none animasi"><iconify-icon inline
                         icon="mage:microsoft-windows"></iconify-icon> Windows</a></h5>
             </p>
             <h3 class="fw-bold">Lainnya :</h3>
             <h4 class="fw-bold">HTML <iconify-icon inline icon="flowbite:html-solid"></iconify-icon></h4>
             <p>
-                <a href="basic.html" class="rounded-5 link-none animasi">Basic HTML</a></h5>
-                | <a href="format-text.html" class="rounded-5 link-none animasi mt-2">Format Teks</a></h5>
+                <a href="basic" class="rounded-5 link-none animasi">Basic HTML</a></h5>
+                | <a href="format-text" class="rounded-5 link-none animasi mt-2">Format Teks</a></h5>
             </p>
             <!-- Php -->
             <h4 class="fw-bold">php <iconify-icon inline icon="akar-icons:php-fill"></iconify-icon></h4>
             <p>
-                <a href="basicphp.html" class="rounded-5 link-none animasi">Basic PHP</a></h5>
-                | <a href="varphp.html" class="rounded-5 link-none animasi mt-2">Variabel PHP</a></h5>
+                <a href="basicphp" class="rounded-5 link-none animasi">Basic PHP</a></h5>
+                | <a href="varphp" class="rounded-5 link-none animasi mt-2">Variabel PHP</a></h5>
             </p>
             <h4 class="fw-bold">Projek <iconify-icon inline icon="simple-icons:polymerproject"></iconify-icon></h4>
             <p>
